include/nv_util.h

typedef struct {
    uint16_t major;
    uint16_t minor;
    uint16_t patch;
    const char* build_sha;
} NvVersionInfo;
NV_API const char* nv_version_string(void);
NV_API void nv_get_version_info(NvVersionInfo* out_info);
NV_API uint64_t nv_bench_now(void);